--- a/Final Project/BreitbachScott_DSC540_Milestone5.ipynb
+++ b/Final Project/BreitbachScott_DSC540_Milestone5.ipynb
@@ -118,8 +118,18 @@
     "def standardizeAddress(df, colName):\n",
     "    '''Creates street address uniformity and makes Title Case;\n",
     "    Replaces existing street address column.'''\n",
+    "    tempDF = pd.DataFrame()\n",
+    "    addressDF = pd.DataFrame()\n",
+    "    \n",
     "    tempDF = pandas_usaddress.tag(df, [colName], granularity='single', standardize=True) \n",
-    "    df[colName] = tempDF.SingleLine.str.title()"
+    "    addressDF['Address'] = tempDF.SingleLine.str.title()\n",
+    "    tempDF = pandas_usaddress.tag(df, [colName], granularity='medium', standardize=True) \n",
+    "    addressDF['Suffix'] = tempDF.OccupancySuite.str.title()\n",
+    "    \n",
+    "    for i in range(len(addressDF.Address)):\n",
+    "        addressDF['Address'][i] = addressDF.Address[i].rstrip(str(addressDF.Suffix[i])).strip()\n",
+    "        \n",
+    "    df[colName] = addressDF['Address']"
    ]
   },
   {
@@ -130,6 +140,20 @@
    "source": [
     "standardizeAddress(csvData, 'Street_Address')\n",
     "standardizeAddress(apiData, 'StreetAddress')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# A few manual fixes:\n",
+    "csvData['Street_Address'] = csvData['Street_Address'].str.replace(' Blackstone District', '')\n",
+    "csvData['Street_Address'] = csvData['Street_Address'].str.replace('500 W South', '500 W South St')\n",
+    "apiData['StreetAddress'] = apiData['StreetAddress'].str.replace('710Th Rd', '62193 710Th Rd')\n",
+    "csvData.State = 'NE'\n",
+    "webData.State = 'NE'"
    ]
   },
   {
@@ -151,13 +175,34 @@
     "url = \"https://en.wikipedia.org/wiki/Neighborhoods_of_Omaha,_Nebraska\"\n",
     "listOfTables = pd.read_html(url)\n",
     "omahaSubsDF = listOfTables[1]\n",
-    "omahaSubs = list(omahaSubsDF['Neighborhoods in Omaha alphabetical order'][1:])\n",
-    "omahaSubs.extend(['Omaha', 'LaVista'])  # Add a couple"
+    "omahaSubs = list(omahaSubsDF['Neighborhoods in Omaha alphabetical order'][1:])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fixCitySpacing(df):\n",
+    "    df['City'].replace('Mc Cook', 'McCook', inplace=True)\n",
+    "    df['City'].replace('LaVista', 'La Vista', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fixCitySpacing(csvData)\n",
+    "fixCitySpacing(webData)\n",
+    "fixCitySpacing(apiData)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,11 +325,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Remove Granite City (not a Nebraska brewery):"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def removeGC(df, colName):\n",
+    "    df = df[df[colName] != 'Granite City Food & Brewery']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "removeGC(csvData, 'Brewery_Name')\n",
+    "removeGC(webData, 'Brewery_Name')\n",
+    "removeGC(apiData, 'BreweryName')"
+   ]
   },
   {
    "cell_type": "code",
@@ -302,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -374,9 +440,9 @@
      "output_type": "stream",
      "text": [
       "Table: 'csvtable' - \n",
-      "('backswing-brewing-co-lincoln', 'Backswing Brewing Co.', 'Micro', '500 W South St Ste 8', 'Lincoln', 'Nebraska', '68522-1744', 68522, 'http://www.backswingbrewing.com', '(402) 515-4263', None, None, 'Lincoln')\n",
+      "('backswing-brewing-co-lincoln', 'Backswing Brewing Co.', 'Micro', '500 W South', 'Lincoln', 'Nebraska', '68522-1744', 68522, 'http://www.backswingbrewing.com', '(402) 515-4263', None, None, 'Lincoln')\n",
       "('benson-brewery-omaha', 'Benson Brewery', 'Brewpub', '6059 Maple St', 'Omaha', 'Nebraska', '68104-4050', 68104, 'http://www.bensonbrewery.com', '(402) 934-8668', -96.00634511, 41.28489756, 'Omaha')\n",
-      "('boiler-brewing-company-lincoln', 'Boiler Brewing Company', 'Micro', '129 N 10Th St Ste 8', 'Lincoln', 'Nebraska', '68508-3633', 68508, 'http://www.boilerbrewingcompany.com', '(402) 261-8775', None, None, 'Lincoln')\n",
+      "('boiler-brewing-company-lincoln', 'Boiler Brewing Company', 'Micro', '129 N 10Th', 'Lincoln', 'Nebraska', '68508-3633', 68508, 'http://www.boilerbrewingcompany.com', '(402) 261-8775', None, None, 'Lincoln')\n",
       "\n",
       "Table: 'webtable' - \n",
       "('Backswing Brewing Co.', 'Lincoln', 'Nebraska', 'Micro', 'On-tap at the brewery and at select locations', 'Distro planned for 2016', 1, 'Lincoln', 'Lincoln')\n",
@@ -385,7 +451,7 @@
       "\n",
       "Table: 'apitable' - \n",
       "(21938, 'Catalyst Brewing Company', 'Brewery', 'https://beermapping.com/location/21938', 'http://beermapping.com/maps/proxymaps.php?locid=21938&amp;d=5', 'http://beermapping.com/maps/blogproxy.php?locid=21938&amp;d=1&amp;type=norm', '5730 Hidcote Dr', 'Lincoln', 'NE', 68516, 'United States', '(402) 875-5588', None, 0.0, 0, 'Lincoln')\n",
-      "(19644, 'Backswing Brewing Co.', 'Brewery', 'https://beermapping.com/location/19644', 'http://beermapping.com/maps/proxymaps.php?locid=19644&amp;d=5', 'http://beermapping.com/maps/blogproxy.php?locid=19644&amp;d=1&amp;type=norm', '500 W South St 8', 'Lincoln', 'NE', 68522, 'United States', '(402) 515-4263', 'facebook.com/BackswingBrewingCo/timeline', 0.0, 0, 'Lincoln')\n",
+      "(19644, 'Backswing Brewing Co.', 'Brewery', 'https://beermapping.com/location/19644', 'http://beermapping.com/maps/proxymaps.php?locid=19644&amp;d=5', 'http://beermapping.com/maps/blogproxy.php?locid=19644&amp;d=1&amp;type=norm', '500 W South St', 'Lincoln', 'NE', 68522, 'United States', '(402) 515-4263', 'facebook.com/BackswingBrewingCo/timeline', 0.0, 0, 'Lincoln')\n",
       "(17706, 'Benson Brewery', 'Brewpub', 'https://beermapping.com/location/17706', 'http://beermapping.com/maps/proxymaps.php?locid=17706&amp;d=5', 'http://beermapping.com/maps/blogproxy.php?locid=17706&amp;d=1&amp;type=norm', '6059 Maple St', 'Omaha', 'NE', 68104, 'United States', '(402) 937-1892', 'bensonbrewery.com', 0.0, 0, 'Omaha')\n",
       "\n"
      ]
