--- a/Final Project/Test1.ipynb
+++ b/Final Project/Test1.ipynb
@@ -5060,6 +5060,92 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 419,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Backswing Brewing Co.', 'Lincoln', '500 W South St 8')\n",
+      "('Backswing Brewing Co.', 'Lincoln', '500 W South St Ste 8')\n",
+      "('Benson Brewery', 'Omaha', '6059 Maple St')\n",
+      "('Boiler Brewing Company', 'Lincoln', '129 N 10Th St Ste 8')\n",
+      "('Boiler Brewing Company', 'Lincoln', '129 N 10Th St Suite 8')\n",
+      "('Bolo Beer Co.', 'Valentine', '420 E 1St St')\n",
+      "('Bootleg Brewers, Sandhills Brewing Co.', 'Taylor', '45145 829Th Rd')\n",
+      "('Bottle Rocket Brewing Company', 'Seward', '230 S 5Th St')\n",
+      "('Brickway Brewery & Distillery', 'Omaha', '1116 Jackson St')\n",
+      "('Brush Creek Brewing Company', 'Atkinson', '102 N Main St')\n",
+      "('Catalyst Brewing Company', 'Lincoln', '5730 Hidcote Dr')\n",
+      "('Code Beer Company', 'Lincoln', '200 S Antelope Valley Pkwy')\n",
+      "('Cosmic Eye Brewing', 'Lincoln', '6800 P St 300')\n",
+      "('Divots Brewery', 'Norfolk', '4200 W Norfolk Ave')\n",
+      "('Empyrean Brewing Company', 'Lincoln', '729 Q St')\n",
+      "('Fairfield Opera House Brewery & Grill', 'Fairfield', '415 N D St')\n",
+      "('Farnam House Brewing Company', 'Omaha', '3558 Farnam St')\n",
+      "('First Street Brewing Company', 'Hastings', '119 N St Joseph Ave')\n",
+      "('Flyover Brewing Company', 'Scottsbluff', '1824 Broadway')\n",
+      "('Gottberg Brew Pub', 'Columbus', '2804 13Th St')\n",
+      "('Granite City Food & Brewery', 'Lincoln', '6150 O St')\n",
+      "('Granite City Food & Brewery', 'Lincoln', '6200 O St')\n",
+      "('Granite City Food & Brewery', 'Omaha', '1001 N 102Nd St')\n",
+      "('Hanging Horseshoe Brewing Company', 'Imperial', '73892 332Nd Ave')\n",
+      "('Infusion Brewing Company', 'Omaha', '6115 Maple St')\n",
+      "('Infusion Brewing Company', 'Omaha', '6271 S 118Th St')\n",
+      "('Jaipur Brewing Company', 'Omaha', '10922 Elm St')\n",
+      "('Johnnie Byrd Brewing Company', 'Wayne', '121 N Pearl St')\n",
+      "('Kinkaider Brewing Company', 'Broken Bow', '43860 Paulsen Rd')\n",
+      "('Kros Strain Brewing Company', 'La Vista', '10411 Portal Rd Ste 102')\n",
+      "('Lazy Horse Brewing & Winery', 'Ohiowa', '211 Rd 20Th')\n",
+      "('Loop Brewing Company', 'McCook', '404 W A St')\n",
+      "('Lost Way Brewery', 'Holdrege', '614 3Rd Ave')\n",
+      "('Lucky Bucket Brewing Company', 'La Vista', '11941 Centennial Rd Ste 1')\n",
+      "('Nebraska Brewing Company', 'La Vista', '6950 S 108Th St')\n",
+      "('Nebraska Brewing Company', 'Papillion', '7474 Towne Center Pkwy Ste 101')\n",
+      "('Pals Brewing Company', 'North Platte', '4520 S Buffalo Bill Ave')\n",
+      "('Platte Valley Brewery', 'Kearney', '14 E Railroad')\n",
+      "('Prairie Pride Brewing Company', 'Grand Island', '115 S Front St')\n",
+      "('Schillingbridge Brewing Company', 'Pawnee City', '62193 710Th Rd')\n",
+      "('Schillingbridge Brewing Company', 'Pawnee City', '710Th Rd')\n",
+      "('Scratchtown Brewing Company', 'Ord', '141 S 16Th St')\n",
+      "('Scriptown Brewing Company', 'Omaha', '3922 Farnam St')\n",
+      "('Scriptown Brewing Company', 'Omaha', '3922 Farnam St Blackstone District')\n",
+      "('Soaring Wings Vineyard & Brewing', 'Springfield', '17111 S 138Th St')\n",
+      "('Steeple Brewing Co.', 'Hastings', '717 W 1St St')\n",
+      "('Thunderhead Brewing Company', 'Axtell', '201 Ave F')\n",
+      "('Thunderhead Brewing Company', 'Kearney', '18 E 21St St')\n",
+      "('Upstream Brewing Company', 'Omaha', '514 S 11Th St')\n",
+      "('Vis Major Brewing Company', 'Omaha', '3501 Center St')\n",
+      "('White Elm Brewing Company', 'Lincoln', '2717 S 8Th St')\n",
+      "('White Elm Brewing Company', 'Lincoln', '720 Van Dorn St')\n",
+      "('Zipline Brewing Co.', 'Lincoln', '2100 Magnum Cir Ste 1')\n",
+      "('Zipline Brewing Co.', 'Omaha', '721 N 14Th St')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# columns = ['Brewery', 'City']\n",
+    "# data = []\n",
+    "\n",
+    "with sqlite3.connect('DBTest2.db') as conn:\n",
+    "    cursor = conn.cursor()\n",
+    "    cursor.execute(\"PRAGMA foreign_keys = 1\") \n",
+    "    sql = \"\"\"\n",
+    "        SELECT BreweryName, City, StreetAddress\n",
+    "        FROM apitable\n",
+    "        UNION\n",
+    "        SELECT Brewery_Name, City, Street_Address\n",
+    "        FROM csvtable;\n",
+    "    \"\"\"\n",
+    "    rows = cursor.execute(sql)\n",
+    "    for row in rows:\n",
+    "        print(row)\n",
+    "#         data.append(row)"
+   ]
   }
  ],
  "metadata": {
