--- a/Final Project/BreitbachScott_DSC540_Milestone5.ipynb
+++ b/Final Project/BreitbachScott_DSC540_Milestone5.ipynb
@@ -353,6 +353,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Fix an incorrect zip code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "apiData.loc[apiData['BreweryName'] == 'Code Beer Company', ['Zip']] = 68510"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -368,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -466,6 +482,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pd.read_sql_query('select * from csvTable limit 3', conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pd.read_sql_query('select * from webTable limit 3', conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pd.read_sql_query('select * from apiTable limit 3', conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -479,25 +522,81 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Use `UNION` to merge two similar datasets:"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with sqlite3.connect('Nebeerska.db') as conn:\n",
+    "    cursor = conn.cursor()\n",
+    "    cursor.execute(\"PRAGMA foreign_keys = 1\") \n",
+    "    sql = \"\"\"\n",
+    "        CREATE TABLE brewAddresses AS\n",
+    "            SELECT BreweryName, StreetAddress, City, State, Zip\n",
+    "                FROM apitable\n",
+    "            UNION\n",
+    "            SELECT Brewery_Name, Street_Address, City, State, `5-digit_Zip`\n",
+    "                FROM csvtable;\n",
+    "    \"\"\"\n",
+    "    cursor.execute(sql)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pd.read_sql_query('SELECT * FROM brewAddresses LIMIT 3', conn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Use 'JOIN' to add data to that merged table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combinedData = pd.read_sql_query(\"SELECT \"\n",
+    "    \"webTable.Brewery_Name, brewAddress.StreetAddress, webTable.City, \"\n",
+    "                                 \"webTable.State, brewAddress.Zip, csvTable.Longitude, csvTable.Latitude \"\n",
+    "    \"FROM webTable \"\n",
+    "    \"LEFT JOIN \"\n",
+    "    \"brewAddress ON webTable.Brewery_Name = brewAddress.BreweryName AND webTable.City = brewAddress.City \"\n",
+    "    \"LEFT JOIN \"\n",
+    "    \"csvTable ON webTable.Brewery_Name = csvTable.Brewery_Name AND webTable.City = csvTable.City;\", conn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "omahaSuburbs(combinedData, 'City')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combinedData.head()"
+   ]
   },
   {
    "cell_type": "code",
