--- a/Final Project/Test1.ipynb
+++ b/Final Project/Test1.ipynb
@@ -5146,6 +5146,32 @@
     "        print(row)\n",
     "#         data.append(row)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with sqlite3.connect('DBTest2.db') as conn:\n",
+    "    cursor = conn.cursor()\n",
+    "    cursor.execute(\"PRAGMA foreign_keys = 1\") \n",
+    "    sql = \"\"\"\n",
+    "        SELECT\n",
+    "          webtable.Brewery_Name,\n",
+    "          webtable.City,\n",
+    "          csvtable.City,\n",
+    "          apitable.City\n",
+    "        FROM webtable\n",
+    "        LEFT JOIN csvtable\n",
+    "          ON webtable.Brewery_Name = csvtable.Brewery_Name\n",
+    "        LEFT JOIN apitable\n",
+    "          ON webtable.Brewery_Name = apitable.BreweryName;\n",
+    "    \"\"\"\n",
+    "#     rows = cursor.execute(sql)\n",
+    "#     for row in rows:\n",
+    "#         print(row)"
+   ]
   }
  ],
  "metadata": {
